--- a/Assignment2/src/main/resources/templates/register.html
+++ b/Assignment2/src/main/resources/templates/register.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
 
-    <form th:action="@{/register}" th:object="${user}" method="post">
-        <div>
-            <label>Username:</label>
-            <input type="text" name="username" id="username" required>
-        </div>
-        <div>
-            <label>Password:</label>
-            <input type="password" name="password" id="password" required>
-        </div>
-        <div>
-            <label>Email:</label>
-            <input type="email" name="email" id="email" required>
-        </div>
-        <div>
-            <button type="submit">Register</button>
-        </div>
-    </form>
-
+    <div class="container-sm">
+        <form th:action="@{/register}" th:object="${user}" method = "post">
+            <div class="mb-3">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" name="email">
+            </div>
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" name="username">
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" name="password">
+            </div>
+            <button type="submit" class="btn btn-primary">Register</button>
+        </form>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
